Actualizar README: eliminar instrucciones de VM arguments innecesarias